--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URL=mongodb+srv://Jonathan:s3RWZyaBNYzXIf74@cluster0.w0oe95c.mongodb.net/BetterU
+MONGO_URL=mongodb+srv://tommy:KuheifAkEwnkruqw@userdb.0yemx.mongodb.net/
 SESSION_SECRET=f05c523a-325d-4b8d-9f71-27b38ff38d44
 EMAIL_USER=bbybetteru@gmail.com
-EMAIL_PASS=rtbx luwl gsgr lkxkgit
+EMAIL_PASS=KuheifAkEwnkruqw
