--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "joi": "^17.13.3",
     "mongoose": "^8.12.1",
     "mongoose-sequence": "^6.0.1",
     "nodemailer": "^6.10.0",
