--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongoose-sequence": "^6.0.1",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "ws": "^8.18.1"
   }
 }
